--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,10 @@ android.nonTransitiveRClass=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.mpp.applyDefaultHierarchyTemplate=false
 
 org.jetbrains.compose.experimental.uikit.enabled=true
 
 kotlin.version=1.9.21
-agp.version=8.0.1
+agp.version=8.2.1
 compose.version=1.5.11
